{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "24e0bdcc-ff08-47b3-8f54-98068d2e7c2c",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "f9780ac0-22fd-4198-9c06-e35cb8e002fc",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "463cc6ec-fd86-48eb-aa69-722e03bdd7ec",
                    "path": "2DVector",
                    "interactions": "Press(pressPoint=0.5)",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f428f646-ef93-4ca1-aa48-86e6659e2cbb",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0e82019b-603d-4f53-bb7a-5ee598a1dff6",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "af6c95ce-279f-4862-8e79-74d15f13d273",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "94bb31bc-9685-43d0-afc3-b0a141f71b9e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "23f46012-efa5-4e03-8e66-b06329038e87",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "79d753f5-5fca-40cc-9610-651188bec232",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "978be966-406e-419c-8bc4-3d0ffc89409e",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}